Get 26.1.2 as far as OptiFine's own processor running under FML 11
Three gates, two of them passed and all three now measured.

Java 25, not 21: the vanilla 26.1.2 profile asks for majorVersion 25 and carries
--sun-misc-unsafe-memory-access=allow, which JDK 21 rejects outright, so the 26.x line needs
its own Jdk parameter. Nothing else was needed to start it - the profile has no library
entry for the NeoForge universal jar and FML 11 finds it by itself, so the launcher stays as
it is.

FML 11's "this is OptiFine" judgement is a single file test. IncompatibleModReason.detect
checks each reason by file presence, and OPTIFINE's marker is optifine/Installer.class -
dropping the three Installer entries is enough to get past it. The metadata needs one edit
too: OptiFine ships loaderVersion="[14,)", a Forge-era range that FML 11's javafml cannot
satisfy.

With those two changes in a probe jar the mount works without anything of ours:
OptiFineClassProcessor.init() runs, OptiFineBaseTransformerService finds the ZIP in mods/,
and the processor is asked to handle every class. The client reached the title screen.

What it does not do yet is patch anything: 6917 "Base resource not found:
net/minecraft/resources/Identifier.class" from optifine.Patcher.applyPatch. OptiFine knows
26.x's new names, so the question for the next round is where it looks for the base jar -
FML 11 serves the game from net.neoforged:minecraft-client-patched:26.1.2.109, which is also
the runtime side the member plan will have to compare against.